Quorum/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriIntegerRetnumber.quorum
class Main
    action Main
        Integer one
        one:SetValue(66)
        integer two = 66
        Yoda<Integer, integer, number> yoda
        check
            number ret = yoda:useForce(one, two)
        detect e
            output "passed"
        end
     end
end
