Quorum/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriIntegerRetTextObjFail.quorum
class Main
    action Main
        Integer one
        one:SetValue(66)
        integer two = 66
        Yoda<Integer, integer, Text> yoda
        boolean wrongRet = yoda(one, two)
     end
end
